game-list cards, remove backdrop filters

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -10,6 +10,8 @@
 // COMPONENTS
 @import './components/v-navbar';
 @import './components/v-hero';
+@import './components/v-main';
+@import './components/v-patch-list';
 @import './components/v-game-list';
 
 //MODALS
