--- a/src/assets/style/components/_v-game-list.scss
+++ b/src/assets/style/components/_v-game-list.scss
@@ -1,50 +1,51 @@
 .game-list {
-    height: 100vh;
-    background-image: url(../img/bg-tw.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-
-    .top-shadow {
-        box-shadow: 0px 6px 20px 12px #010101c2;
-    }
-
-    .game-list-bg {
-        height: 100%;
-        width: 100%;
-        backdrop-filter: blur(0px);
-        backdrop-filter: grayscale(1);
-    }
 
     .game-list-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(315px, 1fr));
-        gap: 55px;
-        position: absolute;
-        width: 100%;
-        margin-top: -60px;
+        .games {
+            margin-top: 50px;
+        }
+    }
+
+    h2 {
+        color: $mainOrange;
+        margin-bottom: -30px;
+        text-shadow: 0 0 7px black;
     }
 
     .card {
-        width: 100%;
-        height: 100%;
-        background-color: rgba(243, 242, 242, 0.068);
-        backdrop-filter: blur(5px);
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.541);
+        width: calc(15vw - 30px);
+        height: calc(15vw - 30px);
 
-        img {
-            height: 50%;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin: 15px 0;
+    }
+
+    @media (max-width:1220px) {
+        .card {
+            width: calc(33% - 30px);
+            height: 250px;
+
+
         }
+    }
 
-        .txt-container {
-            padding: 10px;
-            height: 50%;
+    @media (max-width:720px) {
+        .card {
+            width: calc(50% - 30px);
+            height: 350px;
 
-            .patch-body-preview {
-                max-height: 20ch;
-                overflow: hidden;
-                margin-bottom: 25px;
-            }
+
+        }
+    }
+
+    @media (max-width:650px) {
+        .card {
+            width: calc(100% - 30px);
+            height: 450px;
+
+
         }
     }
 }
