--- a/src/assets/style/components/v-hero.scss
+++ b/src/assets/style/components/v-hero.scss
@@ -6,12 +6,13 @@
         top: 0;
         background-position: center;
         background-repeat: no-repeat;
-        background-size: cover;
     }
 
     .rider {
         z-index: -5;
         background-image: url(../img/rider.png);
+        background-size: cover;
+
     }
 
     .bg {
@@ -21,7 +22,7 @@
         .bg-inner {
             top: 0;
             background: #00000017;
-            backdrop-filter: blur(5px);
+            // backdrop-filter: blur(5px);
         }
     }
 
@@ -57,7 +58,6 @@
             color: $mainWhite;
 
             &:first-of-type {
-                backdrop-filter: blur(40px);
                 box-shadow: 2px 2px 16px 2px #2424248c;
                 border: 2px solid #7b3d03;
                 background-color: $mainOrange;
