--- a/src/assets/style/basics/_animations.scss
+++ b/src/assets/style/basics/_animations.scss
@@ -29,3 +29,13 @@
     opacity: 1;
   }
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity .4s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
