--- a/src/assets/style/basics/_variables.scss
+++ b/src/assets/style/basics/_variables.scss
@@ -1,5 +1,5 @@
-$mainWhite: #ebe7e7;
-$secWhite: #909090;
+$mainWhite: #f5deb3;
+$secWhite: #ebe7e7;
 $mainBlack: #101111;
 $secBlack: #030506;
 $mainOrange: #ed6a00;
