--- a/src/assets/style/components/v-hero.scss
+++ b/src/assets/style/components/v-hero.scss
@@ -55,7 +55,7 @@
             border: none;
             width: 180px;
             border-radius: 2px;
-            color: $mainWhite;
+            color: $secWhite;
 
             &:first-of-type {
                 box-shadow: 2px 2px 16px 2px #2424248c;
