--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -13,6 +13,7 @@
 @import './components/v-main';
 @import './components/v-patch-list';
 @import './components/v-game-list';
+@import './components/v-about';
 
 //MODALS
 @import './modals/screen-modal';
