--- a/src/assets/style/basics/_base.scss
+++ b/src/assets/style/basics/_base.scss
@@ -16,6 +16,17 @@ h1 {
 
 }
 
+h2.category {
+  color: $mainOrange;
+  margin-bottom: -30px;
+  text-shadow: 0 0 7px black;
+}
+
+.top-shadow {
+  box-shadow: 0px 6px 20px 12px #010101c2;
+  margin-top: -30px;
+}
+
 button {
   font-size: 1.4rem;
 
