--- a/src/assets/style/components/_v-game-list.scss
+++ b/src/assets/style/components/_v-game-list.scss
@@ -1,15 +1,10 @@
 .game-list {
+    padding-bottom: 100px;
 
     .game-list-container {
         .games {
             margin-top: 50px;
         }
-    }
-
-    h2 {
-        color: $mainOrange;
-        margin-bottom: -30px;
-        text-shadow: 0 0 7px black;
     }
 
     .card {
@@ -20,6 +15,27 @@
         background-position: center;
         background-repeat: no-repeat;
         margin: 15px 0;
+        box-shadow: 0px 0px 10px 2px #0000008f;
+
+        .card-inner {
+            background-color: rgba(0, 0, 0, 0.568);
+            border: 3px solid $mainOrange;
+
+            button {
+                background: transparent;
+                font-weight: 700;
+                border: 3px solid $mainOrange;
+                padding: 5px 10px;
+                color: $mainOrange;
+                transition: .3s;
+
+                &:hover {
+                    background: $mainOrange;
+                    color: $mainWhite;
+
+                }
+            }
+        }
     }
 
     @media (max-width:1220px) {
