--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -14,6 +14,7 @@
 @import './components/v-patch-list';
 @import './components/v-game-list';
 @import './components/v-about';
+@import './components/v-footer';
 
 //MODALS
 @import './modals/screen-modal';
