--- a/src/assets/style/basics/_variables.scss
+++ b/src/assets/style/basics/_variables.scss
@@ -1,7 +1,7 @@
 $mainWhite: #f5deb3;
 $secWhite: #ebe7e7;
 $mainBlack: #101111;
-$secBlack: #030506;
+$secBlack: #0C0C0D;
 $mainOrange: #ed6a00;
 
 $border: #2f2f2f;
