--- a/src/assets/style/components/v-about.scss
+++ b/src/assets/style/components/v-about.scss
@@ -3,6 +3,7 @@
     background-image: url(/mount-and-blade-landing/img/bg-tw.b36d6408.jpg);
     background-position: right;
     background-size: cover;
+    padding-bottom: 100px;
 
     .desc {
         margin: 50px 0;
@@ -14,6 +15,10 @@
         box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
         background-clip: padding-box;
         font-size: 1.3rem;
+
+        p:first-child {
+            margin-bottom: 30px;
+        }
     }
 
     .top-shadow {
@@ -65,6 +70,8 @@
 
         video {
             filter: blur(4px);
+            border-radius: 10px;
+            box-shadow: 6px 6px 20px 0px #0000009c;
         }
     }
 }
