add links, add smooth scrolling, add topbtn

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -15,6 +15,7 @@
 @import './components/v-game-list';
 @import './components/v-about';
 @import './components/v-footer';
+@import './components/v-topbtn';
 
 //MODALS
 @import './modals/screen-modal';
