--- a/src/assets/style/basics/_base.scss
+++ b/src/assets/style/basics/_base.scss
@@ -27,6 +27,17 @@ h2.category {
   margin-top: -30px;
 }
 
+.showmore {
+  cursor: pointer;
+  text-decoration: underline;
+  color: $mainWhite;
+  font-size: 1rem;
+
+  svg {
+    margin-left: 10px;
+  }
+}
+
 button {
   font-size: 1.4rem;
 
