--- a/src/assets/style/components/_v-footer.scss
+++ b/src/assets/style/components/_v-footer.scss
@@ -7,4 +7,8 @@ footer {
         width: 50px;
         margin-left: 10px;
     }
+
+    @media (max-width:580px) {
+        text-align: center;
+    }
 }
