--- a/src/assets/style/components/_v-game-list.scss
+++ b/src/assets/style/components/_v-game-list.scss
@@ -58,10 +58,8 @@
 
     @media (max-width:650px) {
         .card {
-            width: calc(100% - 30px);
+            width: 100%;
             height: 450px;
-
-
         }
     }
 }
