--- a/src/assets/style/components/v-hero.scss
+++ b/src/assets/style/components/v-hero.scss
@@ -22,7 +22,6 @@
         .bg-inner {
             top: 0;
             background: #00000017;
-            // backdrop-filter: blur(5px);
         }
     }
 
@@ -40,12 +39,13 @@
             background-image: url(../img/black_smug.png);
             background-repeat: no-repeat;
             background-position: center;
-            padding: 15px 60px;
+            padding: 15px 25px;
         }
 
         h2 {
-            color: $mainBlack;
+            color: $secWhite;
             margin-bottom: 50px;
+            text-shadow: 1px 1px 3px black;
         }
 
         button {
@@ -56,12 +56,12 @@
             width: 180px;
             border-radius: 2px;
             color: $secWhite;
+            margin: 10px;
 
             &:first-of-type {
                 box-shadow: 2px 2px 16px 2px #2424248c;
                 border: 2px solid #7b3d03;
                 background-color: $mainOrange;
-                margin-right: 20px;
             }
 
             &:last-of-type {
@@ -74,4 +74,23 @@
 
 
     }
+
+    @media (max-width:580px) {
+        .hero-container {
+            align-items: center;
+            text-align: center;
+        }
+
+        .rider {
+            filter: blur(10px);
+        }
+
+        .cta {
+            h1 {
+                background-image: none;
+            }
+        }
+
+    }
+
 }
