--- a/src/assets/style/basics/_helpers.scss
+++ b/src/assets/style/basics/_helpers.scss
@@ -42,6 +42,10 @@
   justify-content: space-around;
 }
 
+.opacify {
+  opacity: 0.4;
+}
+
 .grow {
   flex-grow: 1;
 }
@@ -57,6 +61,10 @@
 
 .absolute {
   position: absolute;
+}
+
+.fixed {
+  position: fixed;
 }
 
 .p-x-15 {
