--- a/src/assets/style/components/_v-navbar.scss
+++ b/src/assets/style/components/_v-navbar.scss
@@ -2,6 +2,12 @@
     height: 50px;
     background-color: $secBlack;
     border-bottom: 3px solid $border;
+    z-index: 999;
+    transition: .3s;
+
+    &:hover {
+        opacity: 1;
+    }
 
     .logo {
         width: 150px;
@@ -13,6 +19,42 @@
 
         &:not(:last-child) {
             margin-right: 30px;
+        }
+    }
+
+    .menu {
+        position: fixed;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        background: $secBlack;
+        padding: 5px;
+        padding-top: 15vh;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        z-index: 999;
+        width: 50vw;
+
+        button {
+            top: 0px;
+            right: 25px;
+        }
+
+        a {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            transition: .3s;
+            padding: 30px 0;
+
+            &:not(:last-child) {
+                margin-right: 0;
+            }
+
+            &:hover {
+                background-color: $mainBlack;
+            }
         }
     }
 }
