--- a/src/assets/style/components/v-hero.scss
+++ b/src/assets/style/components/v-hero.scss
@@ -57,19 +57,33 @@
             border-radius: 2px;
             color: $secWhite;
             margin: 10px;
+            transition: .3s;
+
 
             &:first-of-type {
                 box-shadow: 2px 2px 16px 2px #2424248c;
                 border: 2px solid #7b3d03;
                 background-color: $mainOrange;
+
+                &:hover {
+
+                    background-color: adjust-hue($mainOrange, -10deg);
+
+                }
             }
 
             &:last-of-type {
-                background-color: rgba(255, 255, 255, 0.2);
+                background-color: #ffffff33;
                 box-shadow: 2px 2px 16px 2px #2424248c;
                 border: 2px solid rgba($border, $alpha: 0.5);
                 backdrop-filter: blur(5px);
+
+                &:hover {
+                    background-color: scale-color(#ffffff33, $lightness: -70%, );
+
+                }
             }
+
         }
 
 
