--- a/src/assets/style/basics/_animations.scss
+++ b/src/assets/style/basics/_animations.scss
@@ -39,3 +39,22 @@
 .fade-leave-to {
   opacity: 0;
 }
+
+
+
+.slide-fade-enter-active {
+  transition: all .2s ease;
+}
+
+.slide-fade-leave-active {
+  transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+
+.slide-fade-enter,
+.slide-fade-leave-to
+
+/* .slide-fade-leave-active below version 2.1.8 */
+  {
+  transform: translateX(50vw);
+  opacity: 0;
+}
