--- a/src/assets/style/components/_v-footer.scss
+++ b/src/assets/style/components/_v-footer.scss
@@ -1,5 +1,6 @@
 footer {
-    height: 200px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     background-color: $secBlack;
     color: $mainWhite;
 
