--- a/src/assets/style/components/_v-navbar.scss
+++ b/src/assets/style/components/_v-navbar.scss
@@ -14,6 +14,13 @@
         object-fit: initial;
     }
 
+    svg {
+        cursor: pointer;
+        color: $secWhite;
+        font-size: 1.5rem;
+
+    }
+
     a {
         color: $secWhite;
 
@@ -35,9 +42,10 @@
         height: 100vh;
         z-index: 999;
         width: 50vw;
+        box-shadow: -11px -1px 16px 1px #00000085;
 
-        button {
-            top: 0px;
+        svg {
+            top: 10px;
             right: 25px;
         }
 
