--- a/src/assets/style/modals/_screen-wrapper.scss
+++ b/src/assets/style/modals/_screen-wrapper.scss
@@ -1,8 +1,12 @@
-.modal-screen-wrapper {
+.screen-wrapper {
     position: fixed;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
     width: 100%;
     height: 100%;
     z-index: 990;
+    background-color: #00000094;
 }
